--- a/Website Files/templates/traffic-final.html
+++ b/Website Files/templates/traffic-final.html
@@ -552,7 +552,7 @@
 
     <script>
         // Set your Mapbox access token here
-        mapboxgl.accessToken = 'pk.eyJ1IjoicHVzaHRpdXd1IiwiYSI6ImNtNXBkbjNsNTAwMW0ycG9lYWprZWdnNHQifQ.N3zCDGKkcQBKEaMkfbFqOg';
+        mapboxgl.accessToken = '';
 
         // Function to get the live location
         function getLiveLocation() {
